--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,112 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1{
+  color: #1c538000;
+  margin-bottom: 30px;
+}
+
+.background-blue {
+  height: 40vh;
+  width: 100vw;
+  background-color: #1c5380e0;
+  position: absolute;
+  z-index: -1;
+}
+
+.phones{
+  height: 700px;
+}
+
+.nextToPhones {
+  height: 700px;
+}
+
+.logo-login {
+  margin-bottom: 30px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home{
+  margin-top: 10px;
+  height: 20px;
+}
+
+.logo-login button {
+  padding-bottom: 8px;
+  height: 50px;
+  font-size: 1.3rem;
+  color: white;
+  width: 120px;
+  background-color: #1c5380d0;
+  margin-bottom: 4px;
+  border-radius: 6px;
+}
+.img-text {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1.2rem;
+}
+
+.title-text {
+  font-size: 1.2rem;
+  width: 480px;
+  height:525px;
+  background-color: white;
+  border-radius: 10px;
+  padding-top: 5px;
+  padding-left: 35px;
+  padding-right: 35px;
+  box-shadow: 0px -12px 24px 4px rgba(0,0,0,0.17);
+}
+
+.title-text h3 {
+  color: #06365f;
+  font-size: 2rem;
+}
+
+.title-text p {
+  text-align: left;
+  font-size: 1.05em;
+}
+
+.apps {
+  margin-top: 30px;
+}
+.apps img{
+    height: 60px;
+    margin-right: 20px;
+}
+
+.bottom-navbar ul{
+  width: 1000px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  color: #06365f;
+  font-size: 1.2em;
+  font-weight: bold;
+
+}
+
+.grey {
+  color: grey;
 }
