--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 100vh;
 }
 
 main {
@@ -16,7 +17,7 @@ main {
   align-items: center;
   background-image: linear-gradient(#4b7da2, #285f87);
   background-repeat: no-repeat;
-  background-size: auto 35vh;
+  background-size: auto 30vh;
 }
 
 .container {
@@ -29,22 +30,31 @@ main {
   padding-bottom: 50px;
   height: 80%;
 }
+.phone-img {
+  margin-right: 50px;
+}
 .text-container {
   background-image: url('/images/frame.png');
   background-repeat: no-repeat;
   background-size: contain;
   padding: 10px 30px;
-  
-
+}
+.text-container * p {
+  width: 430px;
 }
 
-
-
-footer > ul {
-  text-decoration: none;
+.logo {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.logo > img {
+  width: 250px;
+}
+.login > button {
+color: #06365f;
+
 }
 
 button {
@@ -64,19 +74,25 @@ button > img {
   height: 25px;
   margin-right: 10px;
 }
+h1 {
+color: #1c5380;
+width: 330px;;
+}
 .download {
   display: flex;
   justify-content: flex-start;
   margin: 30px 0 10px 0;
  
 }
+.download > img {
+  margin-right: 30px;
+}
 footer{
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   height: 20%;
   margin-bottom: 20px;
-  max-width: 900px;
 }
 
 footer > ul {
@@ -91,4 +107,5 @@ footer li {
   margin: 0 10px;
   font-weight: 500;
   font-size: 0.8rem;
+  color: #1c5380;
 }
