--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,63 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+* {
+  box-sizing: border-box;
+}
+header {
+  background-image: url("../images/bgtile.png");
+  height: 300px;
+  background-size: contain;
+}
+main {
+  margin: 0 auto;
+  width: 900px;
+  display: flex;
+  align-items: flex-start;
+  margin-top: -196px;
+  margin-bottom: 50px;
+}
+img.phones {
+  margin-right: 40px;
+}
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.btn {
+  border-radius: 40px;
+  border: 1px solid #1c5380;
+  color: white;
+  background: linear-gradient(#487399, #457298);
+  padding: 10px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn img {
+  margin-right: 5px;
+}
+.description {
+  background-image: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 30px;
+}
+.description h2 {
+  color: #06365f;
+}
+.app-links {
+  margin-top: 50px;
+}
+.app-links img {
+  margin-right: 20px;
+}
+footer {
+  text-align: center;
+}
+footer a {
+  padding: 0px 10px ;
+  font-weight: bold;
+}
