--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,130 @@
+
 /*
 Colors to use:
 dark blue: #06365f
+dark blue: 
 light blue: #1c5380
 */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+
+
+
+}
+
+section div {
+  margin: 5% 50px;
+}
+
+.l-section{
+  display: flex;
+  align-items: center;
+}
+
+.l-section > img{
+  height: 575px;
+}
+
+.r-section{
+  width: 30%;
+
+
+}
+
+.nav-bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.log-btn {
+  display: flex;
+  align-items: center; 
+  justify-content: space-between;
+  background-color: #6f97b6;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #1c5380;
+  text-decoration: none;
+
+}
+
+.log-btn > p {
+  font-weight: bold;
+  color: white;
+  margin: 0 10px;
+
+
+
+}
+
+article {
+  width: 77%;
+  padding: 30px 70px;
+  background: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-radius: 4px;
+  margin-top: 20px;
+
+}
+
+article > h2 {
+
+  font-size: 27px;
+  margin-bottom: 30px;
+  color:  #1c5380;
+}
+
+article > p {
+  line-height: 25px;
+  margin-bottom: 30px;
+}
+
+.badges > a {
+  margin: 10px;
+}
+
+.ig-footer {
+  display: flex;
+  justify-content: center;
+
+
+}
+
+.ig-footer > li{
+  padding: auto;
+  margin: 0 10px;
+  list-style: none;
+  font-size: 15px;
+}
+
+.ig-footer :not(:last-child) {
+  text-transform: uppercase;
+  color: #1c5380 ;
+  font-weight: bold;
+}
+
+.ig-footer :last-child {
+  margin-left: 60px;
+  color: gray;
+  text-transform: uppercase;
 }
