--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,65 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header {
+  height: 300px;
+  background-image: url(../images/bgtile.png);
+}
+
+article {
+  margin: 0 auto;
+  width: 900px;
+  display: flex;
+
+  margin-top: -190px;
+  margin-bottom: 50px;
+}
+
+img.phones {
+  margin-right: 40px;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.btn {
+  border-radius: 4px;
+  border: 1px solid #1c5380;
+  color: white;
+  background-color: linear-gradient(#6F92B0 #457298);
+  display: flex;
+  padding: 10px 20px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.description {
+  background-image: url('../images/frame.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 30px;
+}
+
+.description h2 {
+  color: #06365f;
+}
+
+.app-links {
+  margin-top: 50px;
+}
+
+footer {
+  text-align: center;
+}
+
+footer a {
+  padding: 0 10px;
+  color: #06365f;
+  font-weight: bold;
+}
