--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,79 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
 }
+
+
+header {
+  background-image: url("/images/bgtile.png");
+  height: 350px;
+}
+
+h2 {
+  color: #06365f;
+  font-size: 36px;
+}
+
+.top-img{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -18%;
+  margin-left: 15%;
+}
+
+#content{
+margin-top: -20px;
+}
+
+.section-main{
+  display: flex;
+  justify-content: space-around;
+  margin-left: 60px;
+  margin-right: 60px;
+
+}
+
+.phones{
+  margin-left: 10%;
+  margin-top: -14%;
+  width: 400px;
+}
+
+.logo{
+width: 400px;
+
+}
+
+.home-btn{
+  width: 50px;
+}
+
+.app-img{
+  display: flex;
+  justify-content: space-around;
+}
+
+.app-img > img{
+  width: 200px;
+}
+
+.information {
+ background-image: url("/images/frame.png");
+ background-size: contain;
+ padding: 30px;    
+ background-repeat: no-repeat;
+ width: 500px;
+ text-align: left;
+}
+
+footer ul{
+list-style: none;
+color: #06365f;
+font-weight: bold;
+display: flex;
+justify-content: space-around;
+padding: 50px 200px;
+}
+
