--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,71 @@
 /*
 Colors to use:
-dark blue: #06365f
+dark blue: 
 light blue: #1c5380
 */
+
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+background-image: url(/lab-css-instagram-clone/images/bgtile.png);
+background-repeat: repeat-x;
+}
+
+.logoLogin{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    padding: 20px;
+}
+
+.title{
+  padding-bottom: 10px;
+  margin: auto;
+  color: #06365f;
+  text-align: left;
+  width: 85%;
+}
+
+.textContainer{
+  background-image: url(/lab-css-instagram-clone/images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  padding: 20px;
+  width: 500px;
+}
+
+footer{
+  margin: 70px;
+}
+ul{
+    padding-right: 100px;
+    padding-left: 100px;
+    font-weight: bolder;
+    text-transform: uppercase;
+    color: #06365f;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-end;
+    align-content: space-around;
+    list-style: none;
+  }
+ 
+  #copyright{
+    text-transform: none;
+    color: gray;
+  }
