--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,127 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+	display: flex;
+	flex-direction: row-reverse;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+  background: rgb(58,104,144);
+background: linear-gradient(180deg, rgba(58,104,144,1) 0%, rgba(58,104,144,1) 50%, rgba(255,255,255,1) 50%);
+  background-repeat: no-repeat;
 }
+
+h1 {
+  font-size: 2.5em;
+  color: #06365f;
+}
+
+p {
+  font-size: 1.55em;
+}
+.info h1 {
+  width: 420px;
+  padding-top:4%;
+}
+
+.instagramInfo {
+  width: 45%;
+  margin-bottom: auto;
+  margin-top: 7%;
+  margin-left: 2%;
+}
+
+.instagramInfo .info {
+  background-color: white;
+  border-radius: 7px;
+  box-shadow: inset 0px 0px 2px #000000;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+.logo{
+  width: 50%;
+}
+
+.loginBtn {
+  height: 60px;
+  width: 120px;
+  color: white;
+  font-weight: bold;
+  font-size: 1.25em;
+  padding-right: 20px;
+  margin-right: 5px;
+  border-radius: 4px;
+  background-color:rgb(78,121,157);
+  border: 1px solid 1c5380;
+  box-shadow: inset 0px 0px 2px #000000;
+  background-image: url(../images/home.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-position-x: 10%;
+  background-size: 25%;
+  text-decoration: none;
+  text-align: right;
+  line-height: 60px;
+}
+
+.instagramInfo header {
+  display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	align-content: center;
+}
+
+.platformsIcon {
+  margin-top: 7%;
+
+}
+.platformsIcon img{
+  width: auto;
+  height: 70px;
+  margin-right: 5%;
+}
+.phonesImg {
+  margin-top: 7%;
+  margin-right: 2%;
+  width: 45vh;
+}
+footer {
+  position: absolute;
+  bottom: 5%;
+  left:0;
+  right:0;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	align-content: space-between;
+}
+nav {
+  display: flex;
+}
+nav ul {
+  list-style: none;
+  width: 32vw;
+  margin-right: 30px;
+  display: flex;
+	flex-direction: row;
+  justify-content: center;
+	align-items: center;
+}
+
+nav ul li {
+  margin-right: 8px;
+  margin-left: 8px;
+  font-weight: bold;
+  color: #1c5380;
+}
+
+footer span {
+  font-weight: bold;
+  color: rgba(128,128,128,0.5);
+}
+
