--- a/styles/style.css
+++ b/styles/style.css
@@ -11,4 +11,108 @@ Responsivo
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background-image: url(/images/bgtile.png);
+  background-repeat: no-repeat;
+  background-size: 100% 400px;
+  background-position: top;
+}
+
+/*position*/
+
+.main {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 150px; 
+}
+.section-one {
+  padding-left: 200px;
+  margin-right: 75px; 
+}
+
+.section-two {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+}
+
+#logoButton {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#logoButton > img {
+  margin-right: 100px;
+}
+
+#logoButton > button {
+  background-image: url(/images/bgtile.png);
+  background-size: cover;
+  color:white;
+  font-size: 20px;
+  padding: 10px 10px;
+  text-align: center;
+  border-radius: 8px;
+  border: 1px solid #06365f;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+#logoButton > button > img {
+  padding-right: 10px;
+}
+
+#content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-right: 300px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#content h2 {
+  color: #06365f;
+  font-size: 2rem;
+
+} 
+
+#content p {
+  font-size: 1.3rem;
+  margin-top: 1px;
+  text-align: justify;
+}
+
+#badges {
+  display: flex;
+  align-items: flex-start;
+}
+
+#badges img {
+  margin-right: 30px;
+}
+
+#list {
+  display: flex;
+  align-items: center;
+  align-content: space-evenly;
+  justify-content: center;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+#list li {
+  margin-right: 20px;
+  color: #1c5380;
+  font-weight: bolder;
+}
+
+#list li:last-child {
+  color: gray;
 }
