--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,142 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+html, body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 1.5em;
+}
+
+.align-right {
+  padding: 2rem;
+  margin-left: 3rem;
+  flex-wrap: wrap;
+  display: flex;
+  width: 600px;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-between
+}
+
+
+
+header img {
+  width: 60%;
+}
+
+.login a {
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1.5%;
+  align-self: center;
+  padding: 0.5rem 1rem;
+  border-color:#06365f;
+  background-color:#57768f79 ;
+
+  
+}
+
+.login img {
+  margin-right: 0.5rem;
+  width: 30%;
+}
+
+/*.superior {
+  background-image: url("https://raw.githubusercontent.com/inhelliburn89/lab-css-instagram-clone/master/images/bgtile.png");
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  position: absolute;
+  height: 40vh;
+}*/
+
+.superior {
+  background-color: #06365f;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  position: absolute;
+  height: 40vh;
+  background-image: linear-gradient(#06365f, #1c5380);
+}
+
+.contenedor-texto {
+  position: relative;
+background-image: url("https://raw.githubusercontent.com/inhelliburn89/lab-css-instagram-clone/master/images/frame.png");
+  background-size: contain;
+  margin-top: 5%;
+  background-repeat: no-repeat;
+  padding: 1.5rem 2rem 1.5rem 2rem;
+}
+
+.phone {
+  
+  padding-left: 50px;
+  height: auto;
+    width: 30%;
+    position:relative;
+    
+    margin:  50px;
+}
+
+main {
+display: flex;
+flex-direction:  row;
+position:relative;
+align-content: space-between;
+
+
+padding:  40px;
+
+}
+
+.linknav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly
+}
+
+footer {
+  width: 100%;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  
+}
+
+ul a{
+  text-decoration: none;
+  color: #1c5380;
+}
+
+li {
+  list-style: none;
+  font-size: 0.7em;
+  padding: 1rem;
+  text-transform: uppercase;
+  font-weight: 800;
+}
+
+footer ul li:last-child {
+  color: lightslategrey;
 }
